--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PC2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(PC2 main.cpp)
+add_executable(PC2 main.cpp fight.h arena.h arena.cpp fighter.h attacks.h)
